# Kinova_predictive_impedance_controller

Matlab/: Kinova_visualization.m  ProMP_kinova_error.m  unscented_Kalman_online.m  untitled.m
Matlab/DataCollection/: RECORDING_STRUCTURE.txt
Matlab/DataCollection/trial1/: p1.csv  p10.csv  p11.csv  p12.csv  p14.csv  p15.csv  p17.csv  p18.csv  p21.csv  p22.csv  p23.csv  p26.csv  p27.csv  p29.csv  p3.csv  p30.csv  p31.csv  p32.csv  p33.csv  p34.csv  p37.csv  p38.csv  p42.csv  p44.csv  p45.csv  p47.csv  p49.csv  p50.csv  p55.csv  p58.csv  p59.csv  p6.csv  p60.csv  p7.csv  p8.csv
Matlab/DataCollection/trial2/: p10.csv  p11.csv  p12.csv  p13.csv  p14.csv  p15.csv  p16.csv  p17.csv  p18.csv  p19.csv  p2.csv  p20.csv  p21.csv  p22.csv  p23.csv  p24.csv  p25.csv  p26.csv  p27.csv  p28.csv  p29.csv  p3.csv  p30.csv  p31.csv  p32.csv  p33.csv  p34.csv  p35.csv  p36.csv  p37.csv  p38.csv  p39.csv  p4.csv  p40.csv  p41.csv  p42.csv  p43.csv  p44.csv  p45.csv  p46.csv  (+19 more)
Matlab/DataCollection/trial3/: p1.csv  p10.csv  p11.csv  p12.csv  p13.csv  p14.csv  p15.csv  p16.csv  p17.csv  p18.csv  p19.csv  p2.csv  p20.csv  p21.csv  p22.csv  p23.csv  p24.csv  p25.csv  p26.csv  p27.csv  p28.csv  p29.csv  p3.csv  p30.csv  p31.csv  p32.csv  p33.csv  p34.csv  p35.csv  p36.csv  p37.csv  p38.csv  p39.csv  p4.csv  p40.csv  p41.csv  p42.csv  p43.csv  p44.csv  p45.csv  (+20 more)
Matlab/DataCollection/trial4/: p1.csv  p10.csv  p11.csv  p12.csv  p13.csv  p14.csv  p15.csv  p16.csv  p17.csv  p18.csv  p19.csv  p2.csv  p20.csv  p21.csv  p22.csv  p23.csv  p24.csv  p25.csv  p26.csv  p27.csv  p28.csv  p29.csv  p3.csv  p30.csv  p31.csv  p32.csv  p33.csv  p34.csv  p35.csv  p36.csv  p37.csv  p38.csv  p39.csv  p4.csv  p40.csv  p41.csv  p42.csv  p43.csv  p44.csv  p45.csv  (+20 more)
Matlab/ProMp/: Result comparison.xlsx  ~$Result comparison.xlsx
ProMP_realtime_Jorge-main/: CMakeLists.txt  README.md
ProMP_realtime_Jorge-main/include/: prediction.hpp  sg_filter.hpp  training.hpp
ProMP_realtime_Jorge-main/lib/promp_1/: CMakeLists.txt
ProMP_realtime_Jorge-main/lib/promp_1/include/promp/: promp.hpp
ProMP_realtime_Jorge-main/lib/promp_1/src/: promp.cpp  trajectory.cpp
ProMP_realtime_Jorge-main/src/: main.cpp  prediction.cpp  training.cpp
demos/: 1p13.csv  1p16.csv  1p19.csv  1p2.csv  1p20.csv  1p24.csv  1p25.csv  1p28.csv  1p35.csv  1p36.csv  1p39.csv  1p4.csv  1p40.csv  1p41.csv  1p43.csv  1p46.csv  1p48.csv  1p5.csv  1p51.csv  1p52.csv  1p53.csv  1p54.csv  1p56.csv  1p57.csv  1p9.csv
model/: metadata.txt  model.promp
results/: obs.txt  p1.csv
